// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadSidebars normal site with sidebars 1`] = `
Object {
  "docs": Array [
    Object {
      "items": Array [
        Object {
          "id": "installation",
          "type": "doc",
        },
      ],
      "label": "Getting Started",
      "type": "category",
    },
    Object {
      "items": Array [
        Object {
          "id": "blog",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
}
`;

exports[`loadSidebars site with sidebars & versioned sidebars 1`] = `
Object {
  "docs": Array [
    Object {
      "items": Array [
        Object {
          "id": "installation",
          "type": "doc",
        },
      ],
      "label": "Getting Started",
      "type": "category",
    },
    Object {
      "items": Array [
        Object {
          "id": "blog",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
  "version-1.0.0-docs": Array [
    Object {
      "items": Array [
        Object {
          "id": "version-1.0.0-installation",
          "type": "doc",
        },
      ],
      "label": "Getting Started",
      "type": "category",
    },
    Object {
      "items": Array [
        Object {
          "id": "version-1.0.0-blog",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
  "version-1.0.1-docs": Array [
    Object {
      "items": Array [
        Object {
          "id": "version-1.0.1-installation",
          "type": "doc",
        },
      ],
      "label": "Getting Started",
      "type": "category",
    },
    Object {
      "items": Array [
        Object {
          "id": "version-1.0.1-blog",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
}
`;

exports[`loadSidebars site without sidebars 1`] = `Object {}`;
